--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -164,7 +164,7 @@
   }
 }
 
-.btn--user {
+.btn--list {
   color: $color-grey-dark-2;
   font-size: 2rem;
   font-weight: 600;
@@ -190,7 +190,7 @@
     transform: translateX(2px);
   }
 
-  .user__btn-add {
+  .list__icon--add {
     transform: translate(4px, 4px);
   }
 
