--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -86,6 +86,10 @@
     display: flex;
     align-items: center;
 
+    &--home {
+      text-decoration: none;
+    }
+
     svg {
       height: 2.4rem;
       width: 2.4rem;
