--- a/src/sass/_lists.scss
+++ b/src/sass/_lists.scss
@@ -1,15 +1,16 @@
 .section {
   padding: 5rem 8rem 0rem 8rem;
   // overflow: auto;
+  margin-bottom: 6rem;
   text-align: center;
 
   &__title {
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
     &::after,
     &::before {
       content: '';
       display: inline-block;
-      width: 30%;
+      width: 35%;
       height: 1px;
       background-color: $color-grey-light-3;
       transform: translateY(1.5rem);
@@ -30,38 +31,24 @@
       }
     }
   }
-
-  &__go-to-btn:link,
-  &__go-to-btn:visited {
-    margin-top: 4rem;
-    display: inline-block;
-
-    svg {
-      transform: translateY(3px);
-    }
-  }
-
-  &__create-list-btn:link,
-  &__create-list-btn:visited {
-    margin: 4rem 0;
-    display: inline-block;
-
-    svg {
-      transform: translateY(3px);
-    }
+  &__list {
+    display: grid;
+    justify-items: center;
   }
 }
 
 .list {
-  margin: 0 auto;
-  margin-bottom: 4rem;
-  width: 45%;
-  height: 65rem;
-  perspective: 150rem;
-  -moz-perspective: 150rem;
+  // position: relative;
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 3rem 4rem rgba(0, 0, 0, 0.15);
+  background-color: $color-grey-light-4;
+  margin: 3rem;
   text-align: left;
-
-  position: relative;
+  padding-bottom: 1rem;
+  // max-width: 50rem;
+  width: 45%;
+  height: fit-content;
 
   @media only screen and (max-width: $bp-medium) {
     width: 60%;
@@ -70,113 +57,27 @@
     width: 90%;
   }
 
-  &__side {
-    font-size: 2rem;
-    min-height: inherit;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    backface-visibility: hidden;
-    border-radius: 1rem;
-    overflow: hidden;
-    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.15);
-    transition: all 0.6s ease;
-
-    &--front {
-      background-color: $color-grey-light-4;
-    }
-
-    &--back {
-      transform: rotateY(180deg);
-      background-image: $gradient;
-      padding: 5rem 2rem 9rem 2rem;
-      display: flex;
-      flex-direction: column;
-      place-content: center;
-      justify-content: flex-end;
-    }
+  &__list-container {
+    position: relative;
   }
 
-  &__corner {
-    border-bottom-right-radius: 1.5rem;
-    z-index: 10;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 5rem;
-    height: 5rem;
-
-    &--front {
-      right: 0;
-    }
-
-    &--back {
-      left: 0;
-    }
-  }
-
-  &__button-flip {
-    display: block;
-
-    font-size: 3rem;
-    width: 5rem;
-    height: 5rem;
-    transform: translateY(-0.5rem);
-    transition: all 0.2s;
-    border-radius: 0.5rem;
-    background-color: transparent;
-
-    &:hover {
-      transform: translateY(-7px) scale(1.2);
-      cursor: pointer;
-    }
-
-    &--front {
-      color: $color-primary;
-      text-align: start;
-
-      &:hover {
-        color: rgba($color-grad-2, 0.8);
-      }
-    }
-    &--back {
-      color: rgba($color-grey-light-2, 0.9);
-      text-align: end;
-
-      &:hover {
-        color: rgba($color-grey-light-1, 0.8);
-      }
-    }
-  }
-
-  // FLIP EFFECT
-  //   &:hover &__side--front {
-  //     transform: rotateY(-180deg);
-  //   }
-  //   &:hover &__side--back {
-  //     transform: rotateY(0);
-  //   }
-
-  //FRONT SIDE STYLING
-  &__img {
-    height: 15rem;
+  &__list-img {
+    height: 17rem;
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: screen;
+    clip-path: polygon(0 0, 100% 0, 100% 65%, 0 100%);
     background-image: linear-gradient(
         to right bottom,
         rgba($color-grad-1, 0.8),
         rgba($color-grad-2, 0.8)
       ),
-      url(../img/shoppingImgs/shopping-1.jpg);
-    background-size: cover;
-    background-position: center;
-    background-blend-mode: screen;
-    clip-path: polygon(0 0, 100% 0, 100% 65%, 0 100%);
+      url(../img/shoppingImgs/user-3.jpg);
   }
 
   &__title {
     position: absolute;
-    top: 10rem;
+    top: -10rem;
     right: 2rem;
     width: 90%;
     text-align: right;
@@ -188,70 +89,13 @@
     span {
       @include gradient-background-text;
     }
-  }
 
-  &__shopping-list {
-    margin-top: 4rem;
-    height: 40rem;
-    list-style: none;
-    font-size: 1.8rem;
-    padding: 0.5rem 5rem;
-    overflow: auto;
-
-    &::-webkit-scrollbar {
-      width: 0.5rem;
+    &--form {
+      span {
+        padding-left: 0;
+        padding-right: 0;
+      }
     }
-    &::-webkit-scrollbar-track {
-      background: rgba(59, 59, 59, 0.25);
-      border-radius: 1rem;
-    }
-    &::-webkit-scrollbar-thumb {
-      background: rgba(65, 62, 62, 0.5);
-      border-radius: 2rem;
-    }
-  }
-  &__item {
-    padding: 0.5rem;
-    border-bottom: 1px solid $color-grey-dark-2;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-  }
-  &__item-buttons {
-    display: flex;
-    margin-left: 1.6rem;
-    transform: translateY(0.5rem);
-  }
-}
-
-.only {
-  text-transform: lowercase;
-  font-size: 1.4rem;
-}
-
-.user {
-  &__lists-container {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    align-content: flex-start;
-    // transform: translateY(-20rem) scale(0.8);
-    margin: 0 -8rem;
-    transform: scale(0.9);
-  }
-  &__list {
-    position: relative;
-    border-radius: 1rem;
-    overflow: hidden;
-    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.15);
-    background-color: $color-grey-light-4;
-    margin: 3rem;
-    // margin-top: -3rem;
-
-    padding-bottom: 1rem;
-    min-width: 40rem;
-    // transform: scale(0.8);
-    height: fit-content;
   }
 
   &__shopping-list {
@@ -262,94 +106,34 @@
     padding: 0.5rem 5rem;
   }
 
+  &__item {
+    padding: 0.5rem;
+    border-bottom: 1px solid $color-grey-dark-2;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+
+    &--draggable {
+      cursor: move;
+    }
+
+    &--draggable-dragging {
+      opacity: 0.5;
+    }
+  }
+
+  &__item-buttons {
+    display: flex;
+    margin-left: 1.6rem;
+    transform: translateY(0.5rem);
+  }
+
   &__options {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     padding: 2.5rem 5rem;
-  }
-  &__add-element {
-    justify-content: center;
-  }
-  // &__btn-add {
-  //   margin-top: -1.5rem;
-  //   padding: 0.5rem;
-  //   border-radius: 0.5rem;
-  //   svg {
-  //     transform: translate(4px, 4px);
-  //   }
-  // }
-  &__list-img {
-    height: 17rem;
-    background-size: cover;
-    background-position: center;
-    background-blend-mode: screen;
-    clip-path: polygon(0 0, 100% 0, 100% 65%, 0 100%);
-
-    &--1 {
-      background-image: linear-gradient(
-          to right bottom,
-          rgba($color-grad-1, 0.8),
-          rgba($color-grad-2, 0.8)
-        ),
-        url(../img/shoppingImgs/user-1.jpg);
-    }
-    &--2 {
-      background-image: linear-gradient(
-          to right bottom,
-          rgba($color-grad-1, 0.8),
-          rgba($color-grad-2, 0.8)
-        ),
-        url(../img/shoppingImgs/user-2.jpg);
-    }
-    &--3 {
-      background-image: linear-gradient(
-          to right bottom,
-          rgba($color-grad-1, 0.8),
-          rgba($color-grad-2, 0.8)
-        ),
-        url(../img/shoppingImgs/user-3.jpg);
-    }
-    &--4 {
-      background-image: linear-gradient(
-          to right bottom,
-          rgba($color-grad-1, 0.8),
-          rgba($color-grad-2, 0.8)
-        ),
-        url(../img/shoppingImgs/user-4.jpg);
-    }
-    &--5 {
-      background-image: linear-gradient(
-          to right bottom,
-          rgba($color-grad-1, 0.8),
-          rgba($color-grad-2, 0.8)
-        ),
-        url(../img/shoppingImgs/user-5.jpg);
-    }
-    &--6 {
-      background-image: linear-gradient(
-          to right bottom,
-          rgba($color-grad-1, 0.8),
-          rgba($color-grad-2, 0.8)
-        ),
-        url(../img/shoppingImgs/user-6.jpg);
-    }
-    &--7 {
-      background-image: linear-gradient(
-          to right bottom,
-          rgba($color-grad-1, 0.8),
-          rgba($color-grad-2, 0.8)
-        ),
-        url(../img/shoppingImgs/user-7.jpg);
-    }
-    &--0 {
-      background-image: linear-gradient(
-          to right bottom,
-          rgba($color-grad-1, 0.8),
-          rgba($color-grad-2, 0.8)
-        ),
-        url(../img/shoppingImgs/user-8.jpg);
-    }
+    margin-top: 2.5rem;
   }
 }
 
@@ -360,12 +144,17 @@
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.15);
   background-color: $color-grey-light-4;
   margin: 3rem;
-  // margin-top: -3rem;
-
+  width: 45%;
   padding-bottom: 1rem;
-  min-width: 40rem;
-  // transform: scale(0.8);
+  // max-width: 50rem;
   height: fit-content;
+
+  @media only screen and (max-width: $bp-medium) {
+    width: 60%;
+  }
+  @media only screen and (max-width: $bp-small) {
+    width: 90%;
+  }
 
   &__input {
     font-size: 1.6rem;
@@ -394,9 +183,12 @@
     font-weight: 400;
     color: #fff;
     padding: 1rem 1.5rem;
-    width: 80%;
-    background-image: $gradient;
-    border-radius: 0.5rem;
+    width: 55%;
+    background-color: transparent;
+    // background-image: $gradient;
+    border: none;
+    transform: scale(0.95);
+    outline: none;
     border: none;
 
     &::placeholder {
@@ -404,7 +196,7 @@
     }
     &:focus {
       outline: none;
-      border-bottom: solid 4px $color-grey-dark-2;
+      border-bottom: solid 3px $color-grey-light-2;
     }
   }
 }
